<resources>
  <string name="app_name">firtsApp</string>
  <string name="female">Mujer</string>
  <string name="male">Hombre</string>
  <string name="height">Altura</string>
  <string name="weight">peso</string>
  <string name="age">edad</string>
  <string name="calculate">calcular</string>
  <string name="result">Tu resultado</string>
  <string name="recalculate">Re-calcular</string>
  <string name="error">Error</string>

  <string name="low_weight">Bajo Peso</string>
  <string name="description_low_weight">Estas por debajo del peso optimo</string>

  <string name="normal_weight">Peso Normal</string>
  <string name="description_normal_weight">Estas en el peso optimo</string>

  <string name="high_weight">Peso Alto</string>
  <string name="description_high_weight">Estas por encima del peso optimo</string>

  <string name="obesity">Obesidad</string>
  <string name="description_obesity">Estas muy por encima del peso optimo</string>

  <string name="todo_welcome">Bienvenido</string>
  <string name="todo_category">Categorias</string>
  <string name="todo_tasks">Tareas</string>
  <string name="hint_dialog_task">Escribe la tarea</string>
  <string name="todo_business">Negocio</string>
  <string name="todo_other">Otra</string>
  <string name="todo_personal">Personal</string>
  <string name="create_task">Crear tarea</string>

</resources>