<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent">


  <LinearLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/todo_background_component_app"
    android:orientation="vertical"
    tools:context=".todoapp.TodoActivity">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="32dp"
      android:layout_marginVertical="44dp"
      android:text="@string/todo_welcome"
      android:textAllCaps="true"
      android:textColor="@color/black"
      android:textSize="35sp"
      android:textStyle="bold"
      tools:text="Hola" />

    <TextView
      style="@style/TodoSubtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/todo_category" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rvCategories"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

    <TextView
      style="@style/TodoSubtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/todo_tasks" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/rvTasks"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="32dp" />

  </LinearLayout>

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/fabAddTask"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:src="@drawable/baseline_add_24"
    app:backgroundTint="@color/teal"
    app:fabSize="normal"
    android:layout_gravity="end|bottom"
    app:tint="@color/white" />

</FrameLayout>