<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background_component_app"
  android:paddingHorizontal="16dp"
  android:paddingVertical="60dp"
  tools:context=".imccalculator.ImcCalculatorActivity">

  <androidx.cardview.widget.CardView
    android:id="@+id/cardMale"
    android:layout_width="0dp"
    android:layout_height="150dp"
    android:layout_marginEnd="16dp"
    app:cardBackgroundColor="@color/background_component_selected"
    app:cardCornerRadius="16dp"
    app:layout_constraintEnd_toStartOf="@+id/cardFemale"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical">

      <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:importantForAccessibility="no"
        android:src="@drawable/baseline_male_24"
        app:tint="@color/white" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/male"
        android:textAllCaps="true"
        android:textColor="@color/background_title_text" />

    </androidx.appcompat.widget.LinearLayoutCompat>
  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/cardFemale"
    android:layout_width="0dp"
    android:layout_height="150dp"
    app:cardBackgroundColor="@color/background_component"
    app:cardCornerRadius="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/cardMale"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical">

      <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:importantForAccessibility="no"
        android:src="@drawable/baseline_female_24"
        app:tint="@color/white" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/female"
        android:textAllCaps="true"
        android:textColor="@color/background_title_text" />

    </androidx.appcompat.widget.LinearLayoutCompat>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/viewHeight"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="28dp"
    app:cardBackgroundColor="@color/background_component"
    app:cardCornerRadius="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cardMale">

    <androidx.appcompat.widget.LinearLayoutCompat
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:gravity="center"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textAllCaps="true"
        android:textColor="@color/background_title_text" />

      <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="120 cm"
        android:textColor="@color/black"
        android:textSize="38sp"
        android:textStyle="bold" />

      <com.google.android.material.slider.RangeSlider
        android:id="@+id/rsHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:valueFrom="120"
        android:valueTo="200" />

    </androidx.appcompat.widget.LinearLayoutCompat>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/viewWeight"
    android:layout_width="0dp"
    android:layout_height="150dp"
    android:layout_marginTop="28dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/viewHeight"
    app:layout_constraintEnd_toStartOf="@+id/viewAge"
    app:cardBackgroundColor="@color/background_component"
    app:cardCornerRadius="16dp"
    android:layout_marginEnd="16dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      >

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textAllCaps="true"
        android:textColor="@color/background_title_text" />

      <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="120"
        android:textColor="@color/black"
        android:textSize="38sp"
        android:textStyle="bold" />

      <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/btnSubtractWeight"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          app:backgroundTint="@color/teal"
          android:src="@drawable/baseline_horizontal_rule_24"
          app:tint="@color/white"
          />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/btnAddWeight"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:backgroundTint="@color/teal"
          android:src="@drawable/baseline_add_24"
          app:tint="@color/white"
          />

      </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

  </androidx.cardview.widget.CardView>

  <androidx.cardview.widget.CardView
    android:id="@+id/viewAge"
    android:layout_width="0dp"
    android:layout_height="150dp"
    android:layout_marginTop="28dp"
    app:layout_constraintStart_toEndOf="@+id/viewWeight"
    app:layout_constraintTop_toBottomOf="@id/viewHeight"
    app:layout_constraintEnd_toEndOf="parent"
    app:cardBackgroundColor="@color/background_component"
    app:cardCornerRadius="16dp">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      >

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textAllCaps="true"
        android:textColor="@color/background_title_text" />

      <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="18"
        android:textColor="@color/black"
        android:textSize="38sp"
        android:textStyle="bold" />

      <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/btnSubtractAge"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="16dp"
          app:backgroundTint="@color/teal"
          android:src="@drawable/baseline_horizontal_rule_24"
          app:tint="@color/white"
          />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
          android:id="@+id/btnAddAge"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:backgroundTint="@color/teal"
          android:src="@drawable/baseline_add_24"
          app:tint="@color/white"
          />

      </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

  </androidx.cardview.widget.CardView>

  <Button
    android:id="@+id/btnCalculate"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/calculate"
    android:textColor="@color/background_title_text"
    android:textAllCaps="true"
    android:backgroundTint="@color/background_component"
    />

</androidx.constraintlayout.widget.ConstraintLayout>